Fixed spacing on top of landing page and warning about value passed to input in listing.

--- a/views/components/Landing_Page/Landing.scss
+++ b/views/components/Landing_Page/Landing.scss
@@ -1,7 +1,11 @@
 @import '../../lib/util';
 
+#landing-wrapper {
+	padding: 0;
+	margin-top: -61px; // This is the navbar height
+}
+
 #landing-carousel {
-	margin-top: -58px;
 	z-index: 500;
 	
 	height: 100vh;
